# snippet

./: .gitignore  Cargo.toml  README.md  a.c  b.c  build.bat  build.sh  c.rs  snippet-language-c.wasm  snippet_compiler_c.wasm  snippet_language_c.wasm  xx.rs
wit/c/: compiler.wit
wit/cpp/: language.wit
wit/plugin/: compiler.wit  language.wit  types.wit
wit/rust/: compiler.wit  language.wit
