[workspace]
resolver = "2"
members = ["packages/snippet"]

[workspace.dependencies]
cote = { version = "0.5" }
wit-bindgen = { version = "0.30" }
wit-deps = { version = "0.3" }
wit-bindgen-rt = { version = "0.30.0", features = [
    "bitflags",
] }
wasmtime = { version = "24.0" }
wasmtime-wasi = { version = "24.0" }
color-eyre = { version = "0.6" }
async-trait = { version = "0.1" }
wac-graph = { version = "0.5" }
tokio = { version = "1.39", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
