[workspace]
resolver = "2"
members = [
    "packages/snippet",
    "packages/compiler/c",
    "packages/compiler/cxx",
    "packages/compiler/rust",
    "packages/language/c",
    "packages/language/cxx",
    "packages/language/rust",
]

[workspace.dependencies]
tracing = { version = "0.1" }
cote = { version = "0.5" }
wit-bindgen = { version = "0.30" }
wit-deps = { version = "0.3" }
wit-bindgen-rt = { version = "0.30.0", features = [
    "bitflags",
] }
wasmtime = { version = "24.0" }
wasmtime-wasi = { version = "24.0" }
color-eyre = { version = "0.6" }
async-trait = { version = "0.1" }
wac-graph = { version = "0.5" }
tokio = { version = "1.39", features = ["full"] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "registry",
] }
which = { version = "6.0" }

[profile.release]
lto = true
codegen-units = 1
